# 2D-engine

./: .gitignore  CMakeLists.txt  Makefile  TODO.md
docs/: docs.md
src/: Conductor.cpp  Conductor.hpp  Game.cpp  Game.hpp  main.cpp
src/Engine/: Configurations.hpp  Game.cpp  Game.hpp
src/Engine/Controller/: ControllerConfigurations.hpp  EntityController.cpp  EntityController.hpp
src/Engine/Model/: Entity.cpp  Entity.hpp  Shape.cpp  Shape.hpp  Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp  WorldObject.hpp
src/Engine/Model/Components/: Hitbox.cpp  Hitbox.hpp  RectangleShape.cpp  RectangleShape.hpp  Shape.cpp  Shape.hpp  Transform.hpp  Vec2f.hpp
src/Engine/Model/Core/: Hitbox.cpp  Hitbox.hpp  Transform.hpp
src/Engine/Model/Core/Geometry/: RectangleShape.cpp  RectangleShape.hpp  Shape.hpp
src/Engine/Model/Core/Math/: Mat3.hpp  MathUtils.hpp  Vec2f.hpp
src/Engine/Model/Entities/: Entity.cpp  Entity.hpp  Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp
src/Engine/Model/Geometry/: RectangleShape.hpp  Shape.hpp
src/Engine/Model/Objects/: Entity.cpp  Entity.hpp  Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp  WorldObject.hpp
src/Engine/Model/Physics/: CollisionSystem.cpp  CollisionSystem.hpp  CollisionSystem2.cpp  CollisionsSytem.cpp  CollisionsSytem.hpp
src/Engine/Model/Utils/: Levels.hpp  Utils.hpp
src/Engine/Physics/: CollisionsSytem.hpp  CollisionsSytems.cpp
src/Engine/View/: Mapper.cpp  Mapper.hpp  Rendering.cpp  Rendering.hpp  VertexObject.hpp
src/Utils/: MapGenerator.cpp  MapGenerator.hpp  Utils.hpp
tests/: hitbox_test.cpp  test.cpp
